--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/index.js",
-    "dev": "nodemon"
+    "start:dev": "nodemon"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
