--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "handlebars": "^4.7.7",
     "jsbarcode": "^3.11.5",
     "redis": "^4.2.0",
-    "xmldom": "^0.6.0"
-  },
-  "devDependencies": {
+    "xmldom": "^0.6.0",
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-handlebars": "^6.0.0",
-    "@types/node": "^18.0.3",
+    "@types/node": "^18.0.3"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.2",
