--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "start:dev": "nodemon"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/express-handlebars": "^6.0.0",
+    "@types/node": "^18.0.3",
+    "@types/xmldom": "^0.1.31",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -17,12 +23,7 @@
     "handlebars": "^4.7.7",
     "jsbarcode": "^3.11.5",
     "redis": "^4.2.0",
-    "xmldom": "^0.6.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/express-handlebars": "^6.0.0",
-    "@types/node": "^18.0.3"
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19",
