--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "handlebars": "^4.7.7",
+    "helmet": "^5.1.0",
     "jsbarcode": "^3.11.5",
     "redis": "^4.2.0",
     "xmldom": "^0.6.0"
